# workScheduler

./: CMakeLists.txt
src/: CMakeLists.txt  employee.cpp  employee.hpp  main.cpp
test/: CMakeLists.txt  employeeTest.cpp
